# finance-tracker-crewai

./: README.md  finance_report.md  pyproject.toml  sample_transactions.csv
src/finance_tracker/: crew.py  main.py
src/finance_tracker/config/: agents.yaml  tasks.yaml
